<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DND Manager</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="close">X</string>
    <string name="cancel">Cancel</string>
    <string name="ignore">Ignore</string>
    <string name="send">Send</string>
    <string name="from">From:</string>
    <string name="description">Spam Call/SMS Description:</string>
    <string name="sentMessage">Message Being Sent:</string>
</resources>
